<resources>
    <string name="app_name">File Management</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_file">MY FILE</string>
    <string name="no_files">No files\nSwipe to refresh</string>
    <string name="move">Move</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="copy_here">Copy here</string>
    <string name="cancel">Cancel</string>
    <string name="move_here">Move here</string>
</resources>